# linux-sysno

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: unit-test.yml
scripts/: docker-run.sh  install-rust.sh  install-targets.sh  test.sh
src/: aarch64.rs  arm.rs  generic.rs  lib.rs  m68k.rs  mips.rs  mips64.rs  mipsn32.rs  powerpc.rs  powerpc64.rs  s390x.rs  sparc.rs  sparc64.rs  x32.rs  x86.rs  x86_64.rs
sysno-gen/: Cargo.toml
sysno-gen/src/: format.rs  generate.rs  header.rs  kernel_org.rs  main.rs  table.rs
