[workspace]
exclude = ["sysno-gen"]

[package]
name = "linux-sysno"
version = "0.1.0"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2015"
license = "MIT"
description = "A list of system call numbers"
keywords = ["syscall", "no_std", "linux"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-sysno"
homepage = "https://github.com/shurizzle/linux-sysno"
documentation = "https://docs.rs/linux-sysno"
metadata = { msrv = "1.16.0" }

[features]
default = []

arm = []
mips = []
mips64 = []
powerpc = []
powerpc64 = []
s390x = []
sparc = []
sparc64 = []
x86 = []
x86_64 = []
x32 = []
aarch64 = []
riscv32 = []
riscv64 = []
m68k = []
loongarch64 = []

all = [
  "arm",
  "mips",
  "mips64",
  "powerpc",
  "powerpc64",
  "s390x",
  "sparc",
  "sparc64",
  "x86",
  "x86_64",
  "aarch64",
  "riscv32",
  "riscv64",
  "m68k",
]

[dependencies]
