[workspace]
exclude = ["sysno-gen"]

[package]
name = "linux-sysno"
version = "0.2.4"
authors = ["shurizzle <shura1991@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A list of system call numbers"
keywords = ["syscall", "no_std", "linux", "android"]
readme = "README.md"
repository = "https://github.com/shurizzle/linux-sysno"
homepage = "https://github.com/shurizzle/linux-sysno"
documentation = "https://docs.rs/linux-sysno"

[package.metadata]
msrv = "1.40.0"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "arm-unknown-linux-gnueabi",
  "mips64-unknown-linux-gnuabi64",
  "powerpc-unknown-linux-gnu",
  "powerpc64-unknown-linux-gnu",
  "s390x-unknown-linux-gnu",
  "sparc-unknown-linux-gnu",
  "sparc64-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "x86_64-unknown-linux-gnux32",
  "aarch64-unknown-linux-gnu",
  "riscv32gc-unknown-linux-gnu",
  "riscv64gc-unknown-linux-gnu",
]
cargo-args = ["-Z", "build-std"]

[features]
default = []

arm = []
mips = []
mipsn32 = []
mips64 = []
powerpc = []
powerpc64 = []
s390x = []
sparc = []
sparc64 = []
x86 = []
x86_64 = []
x32 = []
aarch64 = []
riscv32 = []
riscv64 = []
m68k = []
loongarch64 = []
generic = []

all = [
  "arm",
  "mips",
  "mipsn32",
  "mips64",
  "powerpc",
  "powerpc64",
  "s390x",
  "sparc",
  "sparc64",
  "x86",
  "x86_64",
  "aarch64",
  "riscv32",
  "riscv64",
  "m68k",
  "loongarch64",
  "generic",
]

[dependencies]
